Fix mobile dropdown submenus hidden by overly broad .navbar ul selector
.navbar ul { display: none } was matching dropdown submenus too,
overriding the opacity/visibility/max-height toggle. Scoped to
.navbar > ul to only affect the top-level menu list.

--- a/src/app.css
+++ b/src/app.css
@@ -1406,7 +1406,7 @@ div[id] {
 		display: block;
 	}
 
-	.navbar ul {
+	.navbar > ul {
 		display: none;
 		position: fixed;
 		top: 80px;
@@ -1422,7 +1422,7 @@ div[id] {
 		overflow-y: auto;
 	}
 
-	.navbar ul.active {
+	.navbar > ul.active {
 		display: flex;
 	}
 
